--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.0.0",
     "mongoose": "^4.3.0",
     "morgan": "^1.1.1",
+    "ng-tags-input": "^3.0.0",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
