--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.4.3",
     "colors": "1.1.2",
     "express": "^4.4.5",
+    "gulp-eslint": "^2.0.0",
     "jwt-simple": "^0.2.0",
     "moment": "^2.0.0",
     "mongoose": "^4.3.0",
